      %Module::ScanDeps::Preload hash for custom dependencies. That's
      fixed now.
    - $ENV{PAR_RUN} isn't set by PAR::Packer any more because nothing in
      the PAR sources uses it. $ENV{PAR_RUN} is no longer used by PAR
      at all.
    - Unified the environment variables which are looked at for
      finding the system's temporary directory.

* New features
    - The "use PAR { repository => $url };" syntax now also supports
      the use of user-constructed PAR::Repository::Client objects instead
      of an URL.
    - The -F (module code filter) option now supports selective filtering
      of modules. The syntax is "-F FILTER=REGEX" or - as before -
      "-F FILTER". The regular expression is applied to the *file name*,
      of the module inside the PAR (e.g. Foo/Bar.pm). This behaviour was
      chosen over matching against the module name (e.g. Foo::Bar) because
      the filters can be applied to module-like and script files as well
      (.pl, .al, etc.).
    - Updated PAR/FAQ.pod with the new FAQ's from the PAR wiki.
    - Added a POD file PAR/Environment.pod which is intended to become
      an index of all environment variables PAR uses of its own or
      recognizes from its users. Still mostly a stub.

[Changes for 0.957 - Oct 24, 2006]
* Bug fixes, etc.
    - Fix executable PARs top properly detect embedded scripts
      named the same as the executable. (Jesse Vincent)
    - Comment out the call to par_current_exec_proc (in the C loader)
      which breaks the use of symlinks to pp-ed executables when not
      called with a path. (I.e. using a search in $PATH).

[Changes for 0.956 - Oct  3, 2006]
* This is another hotfix release. Fixed a mindless bug introduced in 0.955.

[Changes for 0.955 - Oct  3, 2006]
* Bug fixes, etc.
    - 0.952 introduced removal of system module search paths if -B is in
      effect. This resulted in some valid PAR-related paths being removed
      as well. Fixed. Upgrading from 0.952 and 0.954 is suggested.